@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.10 2002/09/04 01:02:36 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.11 2002/09/04 01:05:38 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1270,3 +1270,9 @@ usr.sbin/pppd/pppd/tty.c			1.5
 
 etc/security					1.77-1.78 (via patch)
   understand md5 password
+
+lib/libc/locale/setlocale.c			1.38-1.40
+  fix a bug of setlocale when changing locales with LC_ALL for the first
+  argunemt and with a string containing many slashes for the second argument.
+  This bug may cause setlocale() to destroy static datas.  exploitable
+  under certain situation.
